...      midnight-dev playing White: 352 - 256 - 510  [0.543] 1118
...      midnight-dev playing Black: 287 - 296 - 534  [0.496] 1117
...      White vs Black: 648 - 543 - 1044  [0.523] 2235
Elo difference: 13.5 +/- 10.5, LOS: 99.4 %, DrawRatio: 46.7 %
SPRT: llr 2.97 (100.8%), lbound -2.94, ubound 2.94 - H1 was accepted

Profile Code and added incremental sel sort + slower time checks
Score of midnight-dev vs midnight-latest: 134 - 75 - 183  [0.575] 392
...      midnight-dev playing White: 74 - 33 - 89  [0.605] 196
...      midnight-dev playing Black: 60 - 42 - 94  [0.546] 196
...      White vs Black: 116 - 93 - 183  [0.529] 392
Elo difference: 52.7 +/- 25.2, LOS: 100.0 %, DrawRatio: 46.7 %
SPRT: llr 2.96 (100.6%), lbound -2.94, ubound 2.94 - H1 was accepted

Late Move Pruning
Score of midnight-dev vs midnight-latest: 309 - 239 - 458  [0.535] 1006
...      midnight-dev playing White: 163 - 104 - 235  [0.559] 502
...      midnight-dev playing Black: 146 - 135 - 223  [0.511] 504
...      White vs Black: 298 - 250 - 458  [0.524] 1006
Elo difference: 24.2 +/- 15.8, LOS: 99.9 %, DrawRatio: 45.5 %
SPRT: llr 2.95 (100.2%), lbound -2.94, ubound 2.94 - H1 was accepted

King Ring Danger Eval
Score of midnight-dev vs midnight-latest: 297 - 225 - 385  [0.540] 907
...      midnight-dev playing White: 166 - 112 - 176  [0.559] 454
...      midnight-dev playing Black: 131 - 113 - 209  [0.520] 453
...      White vs Black: 279 - 243 - 385  [0.520] 907
Elo difference: 27.6 +/- 17.2, LOS: 99.9 %, DrawRatio: 42.4 %
SPRT: llr 2.97 (100.7%), lbound -2.94, ubound 2.94 - H1 was accepted

Pawn Attack Eval
Score of midnight-dev vs midnight-latest: 686 - 597 - 1159  [0.518] 2442
...      midnight-dev playing White: 388 - 264 - 569  [0.551] 1221
...      midnight-dev playing Black: 298 - 333 - 590  [0.486] 1221
...      White vs Black: 721 - 562 - 1159  [0.533] 2442
Elo difference: 12.7 +/- 10.0, LOS: 99.4 %, DrawRatio: 47.5 %
SPRT: llr 2.96 (100.4%), lbound -2.94, ubound 2.94 - H1 was accepted